third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/inline-parity/eq_inline.exp
module 0x42::m {
    fun foo(f: |&u64| has drop) {
        ()
    }
    fun g() {
        foo(|arg0| __lambda__1__g(arg0));
    }
    fun __lambda__1__g(v: &u64) {
        v == &1;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid name
  ┌─ eq_inline.move:8:9
  │
8 │     fun __lambda__1__g(v: &u64) {
  │         ^^^^^^^^^^^^^^ Invalid function name '__lambda__1__g'. Function names cannot start with '_'
